force-app/main/default/objects/vf_RoleTrainingModule__c/vf_RoleTrainingModule__c.object-meta.xml
<CustomObject>
    <label>Role Training Module</label>
    <pluralLabel>Role Training Modules</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Role Training Module</label>
        <displayFormat>ROLETRN-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object to connect roles with training modules (many-to-many)</description>
</CustomObject>