force-app/main/default/objects/vf_RoleTrainingModule__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
    <description>Indicates if the training module is required for the role</description>
    <inlineHelpText>Check if this training module is required for the role (unchecked means optional)</inlineHelpText>
</CustomField>