force-app/main/default/objects/vf_RoleTrainingModule__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <referenceTo>vf_Role__c</referenceTo>
    <relationshipLabel>Role Training Modules</relationshipLabel>
    <relationshipName>RoleTrainingModules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <description>Role that requires this training module</description>
    <inlineHelpText>The role that requires this training module</inlineHelpText>
</CustomField>