force-app/main/default/objects/vf_RoleTrainingModule__c/fields/Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Training_Module__c</fullName>
    <label>Training Module</label>
    <referenceTo>vf_TrainingModule__c</referenceTo>
    <relationshipLabel>Role Training Modules</relationshipLabel>
    <relationshipName>RoleTrainingModules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <description>Training module required for this role</description>
    <inlineHelpText>The training module required for this role</inlineHelpText>
</CustomField>